--- a/SmartSpeech/src/main/bin/AndroidManifest.xml
+++ b/SmartSpeech/src/main/bin/AndroidManifest.xml
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.changclamor.roomtosprout.smartspeech"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.changclamor.roomtosprout.smartspeech"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-sdk
-            android:minSdkVersion="7"
-            android:targetSdkVersion="16"/>
+        android:minSdkVersion="7"
+        android:targetSdkVersion="16" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:name="com.changclamor.roomtosprout.smartspeech.SmartSpeechApp"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".MainActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/app_name"
-                android:theme="@style/FullscreenTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        android:name="com.changclamor.roomtosprout.smartspeech.SmartSpeechApp"
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="f1827d14a58ae7217018586775d0c48e8e079681" />
     </application>
 
 </manifest>
